sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if (v=0) {
             ^